--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "react-family-tree-example",
   "version": "3.2.0",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@types/react-router-dom": "^5.3.3",
     "classnames": "2.3.2",
     "firebase": "^12.6.0",
     "pinch-zoom-pan": "4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-family-tree": "3.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.11.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
