fixed all the issues

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@reduxjs/toolkit": "^2.11.2",
     "@supabase/supabase-js": "^2.91.1",
     "@types/react-router-dom": "^5.3.3",
     "classnames": "2.3.2",
@@ -14,6 +15,7 @@
     "react-dom": "18.2.0",
     "react-family-tree": "3.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "typescript": "4.9.5"
