--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@supabase/supabase-js": "^2.91.1",
     "@types/react-router-dom": "^5.3.3",
     "classnames": "2.3.2",
+    "d3": "^4.13.0",
+    "lodash": "^4.17.23",
     "pinch-zoom-pan": "4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +24,8 @@
   },
   "devDependencies": {
     "@types/classnames": "2.3.1",
+    "@types/d3": "^4.13.0",
+    "@types/lodash": "^4.17.23",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.14",
     "gh-pages": "4.0.0",
